# language_poc

./: README.md
clox/: chunk.c  chunk.h  compiler.c  compiler.h  main.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
inj/: grammar.txt  inj.cabal  stack.yaml  test.inj
inj/src/: AST.hs  CodeGenerator.hs  Compiler.hs  ErrorFormatter.hs  Main.hs  Parser.hs  Prettifier.hs  TypeChecker.hs
ivox/: environment.py  error.py  expr.py  interpreter.py  ivox.py  literal.py  parser.py  resolver.py  scanner.py  stmt.py  token.py
ivox/tests/: int.ivox
