cabal-version: >=1.10
name: inj
version: 0.1.0.0
-- synopsis:
-- description:
-- homepage:
license: BSD3
copyright: 2019 Ivo Kosir
license-file: LICENSE
maintainer: ivo.kosir93@gmail.com
author: Ivo Kosir
category: Language
build-type: Simple
extra-source-files:
  README.md

executable inj
  default-language: Haskell2010
  ghc-options:
    -Wextra
  main-is: Main.hs
  hs-source-dirs: src
  other-modules:
    AST
    CodeGenerator
    Compiler
    ErrorFormatter
    Parser
    Prettifier
    TypeChecker
  build-depends:
    base >=4.7 && <5,
    parsec ==3.1.*,
    llvm-hs ==9.*,
    llvm-hs-pure ==9.*,
    bytestring -any,
    containers -any
